# papyrd-server

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  justfile
.github/workflows/: publish-docker.yml
migrations/: 20260420120000_create_users.sql  20260420143000_create_publications.sql  20260423110000_add_kosync_support.sql
src/: auth.rs  config.rs  epub.rs  error.rs  ingest.rs  kosync_hash.rs  lib.rs  main.rs  state.rs  web.rs
src/domain/: mod.rs  publication.rs  reading_progress.rs  user.rs
src/handlers/: assets.rs  auth.rs  authors.rs  books.rs  home.rs  kosync.rs  mod.rs  opds.rs  upload.rs
src/repositories/: mod.rs  publications.rs  reading_progress.rs  users.rs
static/: app.css
templates/: layout.html
templates/pages/: author_detail.html  authors.html  book_detail.html  books.html  signin.html  signup.html  upload.html
